@@ -37,7 +37,7 @@
 #define BUILDSTRING "Release"
 #endif
 
-#define FULLVERSIONSTRING APPNAME " v" VERSIONSTRING " " BUILDSTRING
+#define FULLVERSIONSTRING VERSIONSTRING " " BUILDSTRING
 
 namespace adchpp {
 
